crates/php-parser/tests/snapshots/integration__builtin_constructs.snap
---
source: crates/php-parser/tests/integration.rs
expression: "category_snapshot(\"builtins\")"
---
=== list assign ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "a"
                        },
                        "span": {
                          "start": 11,
                          "end": 13
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 11,
                        "end": 13
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 15,
                          "end": 17
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 15,
                        "end": 17
                      }
                    }
                  ]
                },
                "span": {
                  "start": 6,
                  "end": 18
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Variable": "arr"
                },
                "span": {
                  "start": 21,
                  "end": 25
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 25
          }
        }
      },
      "span": {
        "start": 6,
        "end": 26
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 26
  }
}
=== short echo ===
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Variable": "value"
            },
            "span": {
              "start": 4,
              "end": 10
            }
          }
        ]
      },
      "span": {
        "start": 4,
        "end": 11
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 11
  }
}
=== multiple echo ===
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 11,
              "end": 13
            }
          },
          {
            "kind": {
              "Variable": "b"
            },
            "span": {
              "start": 15,
              "end": 17
            }
          },
          {
            "kind": {
              "Variable": "c"
            },
            "span": {
              "start": 19,
              "end": 21
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 22
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 22
  }
}
=== die with arg ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "String": "error"
              },
              "span": {
                "start": 10,
                "end": 17
              }
            }
          },
          "span": {
            "start": 6,
            "end": 18
          }
        }
      },
      "span": {
        "start": 6,
        "end": 19
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 19
  }
}
=== exit with code ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Exit": {
              "kind": {
                "Int": 1
              },
              "span": {
                "start": 11,
                "end": 12
              }
            }
          },
          "span": {
            "start": 6,
            "end": 13
          }
        }
      },
      "span": {
        "start": 6,
        "end": 14
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 14
  }
}
=== isset multi ===
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Isset": [
                {
                  "kind": {
                    "Variable": "a"
                  },
                  "span": {
                    "start": 16,
                    "end": 18
                  }
                },
                {
                  "kind": {
                    "Variable": "b"
                  },
                  "span": {
                    "start": 20,
                    "end": 22
                  }
                },
                {
                  "kind": {
                    "Variable": "c"
                  },
                  "span": {
                    "start": 24,
                    "end": 26
                  }
                }
              ]
            },
            "span": {
              "start": 10,
              "end": 27
            }
          },
          "then_branch": {
            "kind": {
              "Block": []
            },
            "span": {
              "start": 29,
              "end": 31
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 31
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 31
  }
}
=== unset multi ===
{
  "stmts": [
    {
      "kind": {
        "Unset": [
          {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 12,
              "end": 14
            }
          },
          {
            "kind": {
              "Variable": "b"
            },
            "span": {
              "start": 16,
              "end": 18
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 20
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 20
  }
}
=== global multi ===
{
  "stmts": [
    {
      "kind": {
        "Global": [
          {
            "kind": {
              "Variable": "a"
            },
            "span": {
              "start": 13,
              "end": 15
            }
          },
          {
            "kind": {
              "Variable": "b"
            },
            "span": {
              "start": 17,
              "end": 19
            }
          },
          {
            "kind": {
              "Variable": "c"
            },
            "span": {
              "start": 21,
              "end": 23
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 24
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 24
  }
}
=== static var multi ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f",
          "params": [],
          "body": [
            {
              "kind": {
                "StaticVar": [
                  {
                    "name": "a",
                    "default": {
                      "kind": {
                        "Int": 1
                      },
                      "span": {
                        "start": 33,
                        "end": 34
                      }
                    },
                    "span": {
                      "start": 28,
                      "end": 34
                    }
                  },
                  {
                    "name": "b",
                    "default": {
                      "kind": {
                        "Int": 2
                      },
                      "span": {
                        "start": 41,
                        "end": 42
                      }
                    },
                    "span": {
                      "start": 36,
                      "end": 42
                    }
                  }
                ]
              },
              "span": {
                "start": 21,
                "end": 44
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 45
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 45
  }
}
=== eval ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Eval": {
              "kind": {
                "String": "echo 1;"
              },
              "span": {
                "start": 11,
                "end": 20
              }
            }
          },
          "span": {
            "start": 6,
            "end": 21
          }
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 22
  }
}
=== require once ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Include": [
              "RequireOnce",
              {
                "kind": {
                  "String": "autoload.php"
                },
                "span": {
                  "start": 19,
                  "end": 33
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 33
          }
        }
      },
      "span": {
        "start": 6,
        "end": 34
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 34
  }
}
=== include expr ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Include": [
              "Include",
              {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "dir"
                      },
                      "span": {
                        "start": 14,
                        "end": 18
                      }
                    },
                    "op": "Concat",
                    "right": {
                      "kind": {
                        "String": "/file.php"
                      },
                      "span": {
                        "start": 21,
                        "end": 32
                      }
                    }
                  }
                },
                "span": {
                  "start": 14,
                  "end": 32
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 32
          }
        }
      },
      "span": {
        "start": 6,
        "end": 33
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 33
  }
}
