crates/php-parser/tests/snapshots/integration__by_reference_function.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function &getRef() {
    static $val = 0;
    return $val;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "getRef",
          "params": [],
          "body": [
            {
              "kind": {
                "StaticVar": [
                  {
                    "name": "val",
                    "default": {
                      "kind": {
                        "Int": 0
                      },
                      "span": {
                        "start": 45,
                        "end": 46
                      }
                    },
                    "span": {
                      "start": 38,
                      "end": 46
                    }
                  }
                ]
              },
              "span": {
                "start": 31,
                "end": 52
              }
            },
            {
              "kind": {
                "Return": {
                  "kind": {
                    "Variable": "val"
                  },
                  "span": {
                    "start": 59,
                    "end": 63
                  }
                }
              },
              "span": {
                "start": 52,
                "end": 65
              }
            }
          ],
          "return_type": null,
          "by_ref": true,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 66
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 66
  }
}
