crates/php-parser/tests/snapshots/integration__by_reference_return_type.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function &getValue(): string {
    return $GLOBALS['value'];
}
function &getReference(array &$arr): mixed {
    return $arr[0];
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "getValue",
          "params": [],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": {
                    "ArrayAccess": {
                      "array": {
                        "kind": {
                          "Variable": "GLOBALS"
                        },
                        "span": {
                          "start": 48,
                          "end": 56
                        }
                      },
                      "index": {
                        "kind": {
                          "String": "value"
                        },
                        "span": {
                          "start": 57,
                          "end": 64
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 48,
                    "end": 65
                  }
                }
              },
              "span": {
                "start": 41,
                "end": 67
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "string"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 28,
                  "end": 34
                }
              }
            },
            "span": {
              "start": 28,
              "end": 34
            }
          },
          "by_ref": true,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 68
      }
    },
    {
      "kind": {
        "Function": {
          "name": "getReference",
          "params": [
            {
              "name": "arr",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "array"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 92,
                      "end": 97
                    }
                  }
                },
                "span": {
                  "start": 92,
                  "end": 97
                }
              },
              "default": null,
              "by_ref": true,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 92,
                "end": 103
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": {
                    "ArrayAccess": {
                      "array": {
                        "kind": {
                          "Variable": "arr"
                        },
                        "span": {
                          "start": 125,
                          "end": 129
                        }
                      },
                      "index": {
                        "kind": {
                          "Int": 0
                        },
                        "span": {
                          "start": 130,
                          "end": 131
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 125,
                    "end": 132
                  }
                }
              },
              "span": {
                "start": 118,
                "end": 134
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "mixed"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 106,
                  "end": 111
                }
              }
            },
            "span": {
              "start": 106,
              "end": 111
            }
          },
          "by_ref": true,
          "attributes": []
        }
      },
      "span": {
        "start": 69,
        "end": 135
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 135
  }
}
