crates/php-parser/tests/snapshots/integration__cast_unset.snap
---
source: crates/php-parser/tests/integration.rs
expression: format_errors(&result)
---
the (unset) cast is no longer supported
