crates/php-parser/tests/snapshots/integration__catch_four_type_union.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
try {
    risky();
} catch (TypeError|ValueError|RuntimeException|LogicException $e) {
    handle($e);
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "TryCatch": {
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "FunctionCall": {
                      "name": {
                        "kind": {
                          "Identifier": "risky"
                        },
                        "span": {
                          "start": 16,
                          "end": 21
                        }
                      },
                      "args": []
                    }
                  },
                  "span": {
                    "start": 16,
                    "end": 23
                  }
                }
              },
              "span": {
                "start": 16,
                "end": 25
              }
            }
          ],
          "catches": [
            {
              "types": [
                {
                  "parts": [
                    "TypeError"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 34,
                    "end": 43
                  }
                },
                {
                  "parts": [
                    "ValueError"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 44,
                    "end": 54
                  }
                },
                {
                  "parts": [
                    "RuntimeException"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 55,
                    "end": 71
                  }
                },
                {
                  "parts": [
                    "LogicException"
                  ],
                  "kind": "Unqualified",
                  "span": {
                    "start": 72,
                    "end": 87
                  }
                }
              ],
              "var": "e",
              "body": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "FunctionCall": {
                          "name": {
                            "kind": {
                              "Identifier": "handle"
                            },
                            "span": {
                              "start": 97,
                              "end": 103
                            }
                          },
                          "args": [
                            {
                              "name": null,
                              "value": {
                                "kind": {
                                  "Variable": "e"
                                },
                                "span": {
                                  "start": 104,
                                  "end": 106
                                }
                              },
                              "unpack": false,
                              "by_ref": false,
                              "span": {
                                "start": 104,
                                "end": 106
                              }
                            }
                          ]
                        }
                      },
                      "span": {
                        "start": 97,
                        "end": 107
                      }
                    }
                  },
                  "span": {
                    "start": 97,
                    "end": 109
                  }
                }
              ],
              "span": {
                "start": 33,
                "end": 111
              }
            }
          ],
          "finally": null
        }
      },
      "span": {
        "start": 6,
        "end": 111
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 111
  }
}
